# 3sem

./: .gitignore
AiSD/0.0/: 0.0.cpp  input.txt
AiSD/0.1/: 0.1.cpp
AiSD/SpecSD/Huffman/: main.cpp
AiSD/SpecSD/hash-table/: main.cpp  output.txt
AiSD/SpecSD/isHeap/: main.cpp
AiSD/SpecSD/megainverse/: main.cpp
AiSD/SpecSD/roads/: main.cpp
AiSD/SpecSD/roads_2-3/: main.cpp
AiSD/SpecSD/sum/: main.cpp
AiSD/binTree/22/: main.cpp
AiSD/binTree/check/: main.cpp
AiSD/binTree/delete/: main.cpp  tree.hpp
AiSD/epidemic/: input.txt  main.cpp  output.txt
AiSD/graph/BFS/: main.cpp  output.txt
AiSD/graph/DFS/: main.cpp  output.txt
AiSD/graph/Dijkstra/: main.cpp
AiSD/matrix/: main.cpp
AiSD/palindrome/: main.cpp
AiSD/recursia/LCS/: main.cpp
AiSD/units/: 1.cpp
OSi/Lab1/: lab1.cpp
OSi/Lab2/: lab2.cpp  main.cpp
OSi/Lab3/: CMakeLists.txt
OSi/Lab3/main/: MarkerSystem.cpp  MarkerSystem.h  main.cpp
OSi/Lab3/tests/: test.cpp
OSi/Lab4/: Browser.cpp  Downloader.cpp  common.h
OSi/Lab5/: Browser.cpp  SharedProtocol.h  Worker.cpp
java/JSON/: input.txt  pom.xml
java/Lab5/: Лабораторная работа 5-2.doc  Лабораторная работа 5-2.txt
java/jsonTask/: data.json  output.txt  pom.xml
java/kalkulatorGUI/: pom.xml
java/kr/: PasswordFinder.java
java/kr2/: pom.xml  Подарки.docx
java/tables/: pom.xml
java/task/: Main.java  Student.java  Students.java
java/test/: project.java
java/threads/: data.txt  data2.txt  pom.xml
java/webTask/: pom.xml  Комплексное задание.docx
java/xmlTask/: library.xml  library.xsd  pom.xml  Задание по языку XML.docx
(+79 files in other folders)
